--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,3 +76,18 @@
 .form-textarea {
   height: 7rem;
 }
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  width: 3rem;
+  height: 3rem;
+  border: 4px solid #64748b;
+  border-radius: 50%;
+  border-top-color: rgb(5, 8, 48);
+  animation: spinner 0.6s linear infinite;
+}
